--- a/style.css
+++ b/style.css
@@ -3,3 +3,20 @@
     padding: 0em;
     font-family: sans-serif;
 }
+
+:root {
+    --grid-cols: 1;
+    --grid-rows: 1;
+}
+
+#board {
+    display: grid;
+    grid-template-rows: repeat(var(--grid-rows), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
+}
+
+.grid-item {
+    padding: 1em;
+    border: 1px solid #ddd;
+    text-align: center;
+}
