--- a/style.css
+++ b/style.css
@@ -2,21 +2,27 @@
     margin: 0em;
     padding: 0em;
     font-family: sans-serif;
-}
-
-:root {
-    --grid-cols: 1;
-    --grid-rows: 1;
-}
-
-#board {
-    display: grid;
-    grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
-}
-
-.grid-item {
-    padding: 1em;
-    border: 1px solid #ddd;
+    color: white;
+    text-shadow: 0px 0px 5px rgb(255, 255, 255), 0px 0px 20px rgb(0, 0, 0), 0px 0px 40px rgb(255, 255, 255);
     text-align: center;
+}
+
+body {
+    background-color: black;
+}
+
+.board {
+    width: 500px;
+    height: 500px;
+    display: grid;
+    box-shadow: 0px 0px 5px rgb(255, 255, 255), 0px 0px 20px rgb(0, 0, 0), 0px 0px 40px rgb(255, 255, 255);
+    margin: 20px 0px;
+    
+}
+
+button, input {
+    background-color: black;
+    border: solid red 2px;
+    border-radius: 20px;
+    padding: 20px;
 }
