--- a/style.css
+++ b/style.css
@@ -11,18 +11,47 @@ body {
     background-color: black;
 }
 
+.title {
+    padding-top: 20px;
+}
+
+.hero-section, .board-logic {
+    display: flex;
+    border: solid red 2px;
+    margin: 6em 30em;
+    flex-direction: column;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
 .board {
+    position: absolute;
+    top: 30%;
+    right: 15%;
     width: 500px;
     height: 500px;
     display: grid;
     box-shadow: 0px 0px 5px rgb(255, 255, 255), 0px 0px 20px rgb(0, 0, 0), 0px 0px 40px rgb(255, 255, 255);
     margin: 20px 0px;
-    
+    /* background-color: white; */
+}
+
+.board-logic {
+    padding: 20px;
 }
 
 button, input {
     background-color: black;
-    border: solid red 2px;
+    border: solid springgreen 2px;
     border-radius: 20px;
     padding: 20px;
+    color: white;
+}
+
+::placeholder {
+    color: white;
 }
